--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -6,13 +6,62 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'plugin/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'plugin/fontawesome/css/font-awesome.min.css' %}">
-
+    <style>
+        .navbar-default{
+            border-radius: 0;
+        }
+    </style>
     {% block css %}{% endblock %}
 </head>
 <body>
 
-    <h1>头部菜单</h1>
-    {% block content%}{% endblock %}
+<nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">爬虫</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+          <li><a href="#">爬百科</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">爬图片 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">IMG</a></li>
+            <li><a href="#">JPG</a></li>
+            <li><a href="#">PNG</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">网页所有图片</a></li>
+          </ul>
+        </li>
+          <li><a href="#">使用说明</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+{% block content%}{% endblock %}
 
     <script src = "{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src ="{% static 'plugin/bootstrap/js/bootstrap.min.js'%}"></script>
