--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,12 +1,41 @@
 {% extends 'layout/basic.html' %}
+{% load static %}
 
 {% block title %}用户注册{% endblock %}
 
 {% block css %}
-
+    <link rel="stylesheet" href="{% static 'css/account.css' %}">
 {% endblock %}
 
 {% block content %}
+    <div class="account">
+    <div class="title">用户注册</div>
+    <form id="form" method="POST" novalidate>
+        {% csrf_token %}
+        {% for field in form %}
+            {% if field.name == 'code' %}
+                <div class="form-group">
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <div class="clearfix">
+                        <div class="col-md-6"style="padding-left: 0">{{ field }}</div>
+                        <div class="col-md-6"><input type="button" class="btn btn-default" value="点击获取验证码"></div>
+                    </div>
+            </div>
+            {% else %}
+                <div class="form-group">
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    {{ field }}
+                </div>
+            {% endif %}
+        {% endfor %}
+
+        <div class="row">
+            <div class="col-xs-3">
+                <input type="button" class="btn btn-primary" value="注  册"/>
+            </div>
+        </div>
+    </form>
+</div>
 
 {% endblock %}
 
