--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -42,6 +42,11 @@
                 </div>
             {% endif %}
         {% endfor %}
+        <div>
+            <div style="float: right">
+                <a href="/login/sms/">短信验证码登录？</a>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-xs-3">
