--- a/web/templates/login_sms.html
+++ b/web/templates/login_sms.html
@@ -43,6 +43,11 @@
             {% endif %}
         {% endfor %}
 
+        <div>
+            <div style="float: right">
+                <a href="/login/">用户名密码登录？</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-3">
                 <input id="btnSubmit" type="button" class="btn btn-primary" value="登  录"/>
