--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,9 +14,9 @@
 {% endblock %}
 
 {% block content %}
-    <body class="text-center" style="background-image: url({% static 'img/index/index.png' %});background-size: 100% ;background-repeat: no-repeat">
+    <body class="text-center" style="background-image: url({% static 'img/index/index1.png' %});background-size: 100% ;background-repeat: no-repeat">
     <div class="index">
-        <div class="title" style="margin-bottom: 50px">图片库</div>
+        <div class="title" style="margin-bottom: 50px;color: #e8e8e8">图片库</div>
         <div class="toCenter">
         <div class="btn-group" role="group" aria-label="...">
           <div class="btn-group" role="group">
