--- a/web/templates/layout/manage.html
+++ b/web/templates/layout/manage.html
@@ -6,8 +6,9 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'plugin/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'plugin/fontawesome/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/manage.css' %}">
     <style>
-        .navbar-default{
+        .navbar-av{
             border-radius: 0;
         }
         .navbar{
@@ -18,7 +19,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-av">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -28,25 +29,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'index' %}">爬虫</a>
+      <a class="navbar-brand" href="{% url 'project_list' %}">收藏</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-{#          <li><a href="#">爬百科</a></li>#}
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">爬图片 <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">IMG</a></li>
-            <li><a href="#">JPG</a></li>
-            <li><a href="#">PNG</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">网页所有图片</a></li>
-          </ul>
-        </li>
-          <li><a href="#">使用说明</a></li>
-      </ul>
+
 
       <ul class="nav navbar-nav navbar-right">
           {% if request.tracer %}
@@ -54,9 +42,9 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">{{ request.tracer.username }}<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="{% url 'project_list' %}">管理中心</a></li>
+                    <li><a href="{% url 'index' %}">官 网</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="{% url 'logout' %}">退  出</a></li>
+                    <li><a href="{% url 'logout' %}">退 出</a></li>
                 </ul>
               </li>
           {% else %}
