--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'plugin/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugin/fontawesome/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'plugin/font-awesome/css/font-awesome.min.css' %}">
     <style>
         .navbar-default{
             border-radius: 0;
@@ -49,10 +49,10 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-          {% if request.tracer %}
+          {% if request.tracer.user %}
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                    aria-expanded="false">{{ request.tracer.username }}<span class="caret"></span></a>
+                    aria-expanded="false">{{ request.tracer.user.username }}<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="{% url 'project_list' %}">管理中心</a></li>
                     <li role="separator" class="divider"></li>
