--- a/web/templates/layout/manage.html
+++ b/web/templates/layout/manage.html
@@ -1,18 +1,22 @@
 {% load static %}
+{% load project %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'plugin/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugin/fontawesome/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'plugin/font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/manage.css' %}">
     <style>
-        .navbar-av{
+        .navbar-av {
             border-radius: 0;
         }
-        .navbar{
-            margin-bottom: 0px;
+
+        .error-msg {
+            color: red;
+            position: absolute;
+            font-size: 13px;
         }
     </style>
     {% block css %}{% endblock %}
@@ -20,46 +24,41 @@
 <body>
 
 <nav class="navbar navbar-av">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'project_list' %}">收藏</a>
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'project_list' %}">图片库</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                {% all_project_list request %}
+
+                {% if request.tracer.project %}
+                    {% manage_menu_list request %}
+                {% endif %}
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">{{ request.tracer.user.username }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'index' %}">官 网</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{% url 'logout' %}">退 出</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-      <ul class="nav navbar-nav navbar-right">
-          {% if request.tracer %}
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                    aria-expanded="false">{{ request.tracer.username }}<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="{% url 'index' %}">官 网</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="{% url 'logout' %}">退 出</a></li>
-                </ul>
-              </li>
-          {% else %}
-              <li><a href="{% url 'login' %}">登录</a></li>
-              <li><a href="{% url 'register' %}">注册</a></li>
-          {% endif %}
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
+{% block content %}{% endblock %}
 
-{% block content%}{% endblock %}
 
-    <script src = "{% static 'js/jquery-3.4.1.min.js' %}"></script>
-    <script src ="{% static 'plugin/bootstrap/js/bootstrap.min.js'%}"></script>
-    {% block js %}{% endblock %}
+<script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+<script src="{% static 'plugin/bootstrap/js/bootstrap.min.js' %}"></script>
+{% block js %}{% endblock %}
 </body>
 </html>
