--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+
     <body class="text-center" style="background-image: url({% static 'img/index/index1.png' %});background-size: 100% ;background-repeat: no-repeat">
     <div class="index">
         <div class="title" style="margin-bottom: 50px;color: #e8e8e8">图片库</div>
@@ -31,15 +32,13 @@
             </ul>
           </div>
         </div>
-        <div  class="col-lg-6">
-            <div align="center" class="input-group">
-                <input id="inputBtn" type="text" class="form-control" placeholder="输入关键字...">
-                <span  class="input-group-btn">
-                    <button id="searchBtn" class="btn btn-default" type="button">获取图片</button>
-                </span>
-            </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-</div>
+            <form action="/search/" method="post" style="display: flex">
+                {% csrf_token %}
+                {#文本框#}
+                <p><input type="text" class="form-control" placeholder="输入关键字..." name="question" style="margin-top: 10px;margin-left: 10px;width: 400px;height: 34px"></p>
+                <input  class="form-control" type="submit" style="margin-top: 10px;margin-left: 10px;width: 70px;height: 34px;">
+            </form>
+        </div>
     </div>
 
 
@@ -48,6 +47,7 @@
 {% endblock %}
 {% block js %}
     <script>
+
         $(function(){
             $('#getMenu').click(function (e){
                 console.log("点击了",e.target.innerText)
